<resources>
    <string name="app_name">Express Flowchart</string>

    <!--New Alert Dialog-->
    <string name="new_diagram_dialog_title">New diagram</string>
    <string name="new_diagram_dialod_body">Reset the working area and make a new diagram?</string>

    <!--Saving Alert Dialog-->
    <string name="file_name_hint">Enter file name</string>
    <string name="save_as">Save as&#8230;</string>
    <string name="save_successful">Save successful</string>
    <string name="save_error">Error saving. Please try again</string>

    <!--Overwriting Alert Dialog-->
    <string name="overwrite_dialog_title">File already exists</string>
    <string name="overwrite_dialog_body">This file already exists, would you like to overwrite it?</string>

    <!--Changes Pending Alert Dialog-->
    <string name="changes_pending_dialog_title">Changes pending</string>
    <string name="changes_pending_dialog_body">You have unsaved changes, are you sure you want to continue?</string>

    <!--Misc-->
    <string name="yes_str">Yes</string>
    <string name="no_str">No</string>
    <string name="ok_str">OK</string>
    <string name="done_str">Done</string>
    <string name="cancel_str">Close</string>

    <!--Loading-->
    <string name="pick_file_title">Pick a file</string>
    <string name="load_error">Error loading. Please try again</string>
    <string name="load_list_error">Could not load items</string>

    <string name="no_mindmap_items_dialog_title">No saved files</string>
    <string name="no_mindmap_items_dialog_body">There are no FastUML files saved on your device.</string>

    <!--New Or Edit node Alert Dialog-->
    <string name="new_node">New node</string>
    <string name="name_hint">Enter name</string>
    <string name="description_hint">Enter description</string>
    <string name="edit_node">Edit node</string>
    <string name="edit_edge">Edit edge</string>
    <string name="delete_button">Delete</string>
    <string name="new_working_area">New working area</string>

    <!--Options Menu-->
    <string name="menu_export">Export as image</string>
    <string name="menu_save">Save sheet</string>
    <string name="menu_open">Open sheet</string>
    <string name="menu_new">New sheet</string>
    <string name="menu_delete">Delete sheet</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>

    <!--preferences-->
    <string name="preference_file_name">"EF_preferences"</string>
    <string name="launching_time">launching_app_first_time</string>



    <!--about-->
    <string name="about_text_created_by" >"Developed and designed by Arjun Krishna"</string>
    <string name="about_text_rating" >"Please considering supporting by giving 5 stars :)"</string>
    <string name="icon_credit" >"Icons made by Freepik from www.flaticon.com"</string>

    <!--help-->
    <string name="bullet">\u2022</string>
    <string name="zoom_help">"Pinch out with two fingers to zoom and pinch in to zoom out."</string>
    <string name="pan_help">"Drag screen using two fingers to pan."</string>
    <string name="add_node_help">"Long press in an empty space to create a node."</string>
    <string name="move_node_help">"To move a node click on it and the drag it to the desired position."</string>
    <string name="add_edge_help">"Double press a node to start creating a new edge from that node then drag the cursor of edge to the destination node to create the edge."</string>
    <string name="details_window_help">"Long pressing any node or edge will give a pop up window to edit selected items properties or to delete it."</string>
    <string name="options_help">"You can use the options menu to save the diagram or export it as an image."</string>

    <!--permission alert-->
    <string name="permission_necessary_title">Write permission necessary!</string>
    <string name="permission_necessary_message">Storage write permission is necessary to export.</string>

    <!--Export Dialog-->
    <string name="export">Export</string>
    <string name="export_dialog_title">Export image</string>
    <string name="export_dialog_body">Enter a name for the image.</string>
    <string name="export_success_toast">Image saved to your gallery.</string>
    <string name="successfully_exported">File exported to gallery.</string>
    <string name="file_saved_in">File saved in :</string>
    <string name="file_saved_successfully">File saved successfully.</string>
    <string name="nothing_to_export">Nothing to export.</string>
    <string name="file_deleted">File Deleted.</string>
    <string name="file_not_deleted">File not deleted.</string>
    <string name="file_name_required">"Please enter file name!"</string>

    <!--spinner-->
    <string name="nodehalf">Half</string>
    <string name="nodecurrent">Current</string>
    <string name="nodedouble">Double</string>
    <string name="nodewrapText">Wrap text</string>
    <string name="edgehalf">Half</string>
    <string name="edgecurrent">Current</string>
    <string name="edgedouble">Double</string>
    <string name="size">Size</string>

    <!--ads-->
    <string name="admob_app_id">ca-app-pub-6846320903215569~5977526270</string>
    <string name="admob_interstitial_id">ca-app-pub-6846320903215569/3026223012</string>

    <string name="welcome_text">Welcome!</string>
    <string name="export_notification_title">Exporting image</string>


</resources>
