<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linerlayout_about">
    <LinearLayout
        android:id="@+id/linearlayout_about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start|center_vertical">

        <ImageView
            android:id="@+id/imageview_about_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src = "@drawable/info"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/textview_about_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/menu_about"
            android:gravity="start|center_vertical"/>

    </LinearLayout>

    <View
        android:id="@+id/view_about_spacer"
        android:layout_width="270dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/divider_gradient"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bullet"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:padding="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text_created_by"
            android:textSize="18sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bullet"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:padding="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/icon_credit"
            android:textSize="18sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bullet"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:padding="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text_rating"
            android:textSize="18sp">
        </TextView>
    </LinearLayout>

</LinearLayout>