<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linerlayout_menu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:translationY="45dp"
    android:layout_gravity="top|start"
    android:orientation="vertical"
    android:background="@color/tansparent70white">
    <View
        android:id="@+id/view_menu_spacer_1"
        android:layout_width="270dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/divider_gradient"/>

    <LinearLayout
        android:id="@+id/linearlayout_menu_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start|center_vertical"
        android:clickable="true">

        <ImageView
            android:id="@+id/imageview_menu_about"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src = "@drawable/info"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/textview_menu_about"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/menu_about"
            android:gravity="start|center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_menu_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start|center_vertical"
        android:clickable="true">

        <ImageView
            android:id="@+id/imageview_menu_help"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src = "@drawable/help"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/textview_menu_help"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/menu_help"
            android:gravity="start|center_vertical"/>
    </LinearLayout>

    <View
        android:id="@+id/view_menu_spacer_2"
        android:layout_width="270dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/divider_gradient"/>

    <LinearLayout
        android:id="@+id/linearlayout_menu_new_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start|center_vertical"
        android:clickable="true">

        <ImageView
            android:id="@+id/imageview_menu_new_project"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/plus"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/textview_menu_new_project"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/menu_new"
            android:gravity="start|center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_menu_open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start|center_vertical">

        <ImageView
            android:id="@+id/imageview_menu_open"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/open"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/textview_menu_open"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/menu_open"
            android:gravity="start|center_vertical"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_menu_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start|center_vertical"
        android:clickable="true"
        >

        <ImageView
            android:id="@+id/imageview_menu_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/save"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/textview_menu_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/menu_save"
            android:gravity="start|center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_menu_export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start|center_vertical"
        android:clickable="true">

        <ImageView
            android:id="@+id/imageview_menu_export"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/export"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/textview_menu_export"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/menu_export"
            android:gravity="start|center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_menu_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start|center_vertical"
        android:clickable="true">

        <ImageView
            android:id="@+id/imageview_menu_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/delete"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/textview_menu_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/menu_delete"
            android:gravity="start|center_vertical"/>

    </LinearLayout>



</LinearLayout>
